
* <apply> has a new attribute relative that allows users to pass the
  filenames as relative instead of absolute paths on the command line.

* References can now be copied into the child build by <ant> and
  <antcall> using nested <reference> elements or the new inheritRefs
  attribute.

* <fail> no supports builds to fail based on conditions via if and
  unless attributes.

* Ant now comes with a BuildLogger implementation that can send emails
  containing a log of the build process (MailLogger).

* A "package" mapper type has been added to allow package directory
  names replaced with the dotted form.
  
* you can now specify environment variables in the <java> and <junit> tasks 
  if the fork attribute has been set to true.

Changes from Ant 1.4 to Ant 1.4.1
===========================================

Fixed bugs:
-----------

* <ant>'s antfile attribute will now also be considered an absolute path on
  Windows systems, if it starts with a \ and no drive specifier.
 
* The fullpath attribute of <zipfileset> has been ignored if you used
  the src attribute at the same time.

* The manifest file is now always placed as the second entry (after /META-INF)
  in generated jars. This allows the manifest to be read by JarInputStreams
  
* Fixed bug in depend task which would fail with a NullPointerException if no
  dependency cache was specified.
  
* sql task now handles REM statements correctly so that lines starying with rem
  but which are not comments are actually processed.
  
* XMLLogger now uses the task's name rather than the classname
  
* <mapper>s will now work as expected if the to pattern expands to an
  absolute pathname.

* <javac> didn't ignore memory settings in non-fork mode

* <cab> didn't split the options attribute into several command line
  arguments correctly.

Other changes:
--------------

* New source attribute for <javac> to enable assertion in JDK 1.4

* XmlLogger and <antstructure> now add an encoding declaration to the